gcc/testsuite/rust/rustc/ui/errors/issue-104621-extern-not-file.rs
//@ compile-flags: --extern foo=.

extern crate foo; // { dg-error "" "" { target *-*-* } }
fn main() {}

